add revapi.json